--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
-  "name": "ts-template",
+  "name": "ververv-assets",
   "version": "1.0.0",
-  "description": "",
+  "description": "Ververv Apps 静态资源管理器",
   "main": "index.js",
   "scripts": {
     "dev": "ts-node src/index.ts",
+    "build": "ts-node scripts/build.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/ejs": "^3.1.5",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^24.6.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "ejs": "^3.1.9",
+    "fs-extra": "^11.1.1"
   }
 }
