feat: add preview script to package.json and enhance homepage styles
- Added a new script "preview" in package.json to serve the dist directory using Python's http.server.
- Updated homepage.ejs to improve styling and layout, including:
  - Merged font styles for better readability.
  - Refined CSS variables for colors, backgrounds, and shadows.
  - Enhanced hero section with new background effects and animations.
  - Improved screenshot display with a more responsive layout.
  - Updated feature and step sections for better alignment and spacing.
  - Added scroll reveal animations for a smoother user experience.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "ts-node src/index.ts",
     "build": "ts-node scripts/build.ts",
+    "preview": "python3 -m http.server 3000 --directory dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
