Redesign homepage template and update app theme color based on icon palette

--- a/data/apps.json
+++ b/data/apps.json
@@ -17,7 +17,7 @@
       "sub_slogan": "AI-powered. Ad-free. 99%+ accuracy.",
       "app_icon": "photocleaner/icon.png",
       "app_store_url": "#",
-      "theme_color": "#007AFF",
+      "theme_color": "#00A3B1",
       "features": [
         {
           "title": "Precision Match",
