feat: implement homepage template and add AloneGuard app configuration

--- a/data/apps.json
+++ b/data/apps.json
@@ -129,52 +129,52 @@
     }
   },
   {
-    "key": "safealone",
-    "name": "SafeAlone",
-    "email": "support@safealone.online",
-    "updated_date": "January 12, 2026",
+    "key": "aloneguard",
+    "name": "AloneGuard",
+    "email": "support@aloneguard.com",
+    "updated_date": "January 13, 2026",
     "has_iap": true,
     "third_party_services": [],
     "pages": ["homepage", "privacy", "terms"],
     "homepage": {
-      "slogan": "SafeAlone - Check In Daily",
+      "slogan": "AloneGuard - Check In Daily",
       "sub_slogan": "Safety Alerts & Protection",
-      "app_icon": "safealone/icon.png",
+      "app_icon": "aloneguard/icon.png",
       "app_store_url": "#",
       "theme_color": "#FF6B6B",
       "features": [
         {
           "title": "Daily Check-In",
           "description": "Scheduled safety reminders and wellness alerts.",
-          "image": "safealone/feature-checkin.svg"
+          "image": "aloneguard/feature-checkin.svg"
         },
         {
           "title": "Emergency Contact",
           "description": "Quick access to emergency contacts and notifications.",
-          "image": "safealone/feature-emergency.svg"
+          "image": "aloneguard/feature-emergency.svg"
         },
         {
           "title": "Privacy First",
           "description": "Your data stays on your device. End-to-end protected.",
-          "image": "safealone/feature-privacy.svg"
+          "image": "aloneguard/feature-privacy.svg"
         },
         {
           "title": "Lone Worker Protection",
           "description": "Safety monitoring for solo work and travel.",
-          "image": "safealone/feature-protection.svg"
+          "image": "aloneguard/feature-protection.svg"
         }
       ],
       "screenshots": [
-        "https://assets.ververv.com/safealone/screenshot-01.png",
-        "https://assets.ververv.com/safealone/screenshot-02.png",
-        "https://assets.ververv.com/safealone/screenshot-03.png",
-        "https://assets.ververv.com/safealone/screenshot-04.png",
-        "https://assets.ververv.com/safealone/screenshot-05.png"
+        "https://assets.ververv.com/aloneguard/screenshot-01.png",
+        "https://assets.ververv.com/aloneguard/screenshot-02.png",
+        "https://assets.ververv.com/aloneguard/screenshot-03.png",
+        "https://assets.ververv.com/aloneguard/screenshot-04.png",
+        "https://assets.ververv.com/aloneguard/screenshot-05.png"
       ],
       "faqs": [
         {
-          "question": "How does SafeAlone work?",
-          "answer": "SafeAlone helps solo workers and travelers stay safe by providing daily check-ins, emergency alerts, and direct contact with emergency contacts when needed."
+          "question": "How does AloneGuard work?",
+          "answer": "AloneGuard helps solo workers and travelers stay safe by providing daily check-ins, emergency alerts, and direct contact with emergency contacts when needed."
         },
         {
           "question": "Is my information private?",
@@ -186,17 +186,17 @@
         },
         {
           "question": "What happens if I miss a check-in?",
-          "answer": "SafeAlone will send you reminder notifications. If you continue to miss check-ins, it will automatically notify your emergency contacts."
+          "answer": "AloneGuard will send you reminder notifications. If you continue to miss check-ins, it will automatically notify your emergency contacts."
         },
         {
-          "question": "How much does SafeAlone cost?",
+          "question": "How much does AloneGuard cost?",
           "answer": "We offer a free version with basic features. Premium features are available through a subscription for enhanced protection and customization."
         }
       ],
-      "support_email_subject": "SafeAlone Support Request",
+      "support_email_subject": "AloneGuard Support Request",
       "support_email_body": "Device: iPhone\niOS Version:\nApp Version: 1.0\n\nPlease describe your issue here:",
       "company_name": "Keli Inc.",
-      "company_url": "safealone.online"
+      "company_url": "aloneguard.com"
     }
   }
 ]
